--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <p class="glogo">gawds</p>
     <p class="wstitle">Graphics and Web Development Workshop</p>
     <div class="wsinfo">
-      <p>Learn to Develop a Simple Real-time Chat Application </p>
+      <p>Develop a Simple Real-time Chat Application </p>
       <p>OR</p>
-      <p>Learn UI Design and Photo Compositing</p>
+      <p>UI Design and Photo Compositing</p>
 
     </div>
     <div class="wsdet">
