--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p>registration-fees :100;</p>
       <p class="diff" >}</p>
     </div>
-    <a class="wsreg" href="#"><p>Register Now</p></a>
+    <a class="wsreg" href="http://www.gawds.in/workshop/register"><p>Register Now</p></a>
     <img src="images/topic.png" class="topics" />
     <div class="blankdiv"></div>
     <div class="wscontact">
